Minor adjustment to timing of reveal functions, fix issue for svg divider on mobile view

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1008,7 +1008,7 @@ video::-webkit-media-controls {
   }
 
   #p1 {
-    margin-top: -20%;
+    margin-top: -35%;
   }
 
   #mainPicture {
